--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,35 @@
-body{
-  background-color: #a8ab9b;
+:root {
+    font-size: 62.5%;
+}
+
+body {
+    background-color: #ebebeb;
+    font-family: Arial, Helvetica, sans-serif
+}
+
+
+html,
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+/* RETIRAR COR DE FUNDO INPUT AUTOCOMPLETE */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 30px #fff inset !important;
 }
